# Glider

./: README.md  app.db  init_db.py  main.py  pyproject.toml  run.py  tox.ini
app/: __init__.py  database.py  models.py  plant.py  routes.py
templates/: index.html  login.html
tests/: test_plant.py  test_routes.py
