[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskplant"
version = "0.1.0"
description = "Group task tracker with collaborative plant growth"
authors = [{name="Team TaskPlant", email="team@example.com"}]
dependencies = [
  "fastapi",
  "uvicorn",
  "jinja2",
  "httpx"
]

[tool.setuptools.packages.find]
where = ["app"]
